--- a/templates/book.html
+++ b/templates/book.html
@@ -235,10 +235,10 @@
             {{ end }}
         </div>
 
-        {{ if .Book.Description }}
+        {{ if .Description }}
         <div class="desc-box">
             <h3 style="margin-top:0; text-transform:uppercase;">Résumé</h3>
-            {{ .Book.Description }}
+            {{ .Description }}
         </div>
         {{ end }}
 
